syntax = "proto3";

option go_package = "./grpc";

package main;

service SuicideService {
  rpc SuicideRequest (Request) returns (Suicide);
}

message Request {
  string request = 1;
}

message Suicide {
  GetStatsData getStatsData = 1 ; //@gotags: json:"GET_STATS_DATA"
 }

message GetStatsData {
  StatisticalData statisticalData = 1 ; //@gotags: json:"STATISTICAL_DATA"
} 

message StatisticalData {
	DataInf dataInf = 1 ; //@gotags: json:"DATA_INF"
} 

message DataInf {
	repeated Value value = 1 ; //@gotags: json:"VALUE"
} 

message Value {
  string time = 1 ; //@gotags: json:"@time"
  string unit = 2 ; //@gotags: json:"@unit"
  string v= 3 ; //@gotags: json:"$"
}
